force-app/main/default/objects/JBT_RET_TERMS_VW__x/JBT_RET_TERMS_VW__x.object-meta.xml
<CustomObject>
    <description>Data warehouse external data view containing current, previous, next and previous / next terms with summer.</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>JBT_RET_TERMS_VWs</externalName>
    <label>Relative Term (external)</label>
    <pluralLabel>Relative Term (external)</pluralLabel>
</CustomObject>