force-app/main/default/objects/JBT_RET_TERMS_VW__x/fields/CURR_TERM__c.field-meta.xml
<CustomField>
    <fullName>CURR_TERM__c</fullName>
    <description>Current Academic Term</description>
    <externalDeveloperName>CURR_TERM</externalDeveloperName>
    <label>Current Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Relative Term (external)</relationshipLabel>
    <relationshipName>Relative_Term_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>