force-app/main/default/objects/JBT_RET_TERMS_VW__x/fields/CURR_TERM_INCLUDE_SUMMER__c.field-meta.xml
<CustomField>
    <fullName>CURR_TERM_INCLUDE_SUMMER__c</fullName>
    <description>Current Academic Term including Summer Terms</description>
    <externalDeveloperName>CURR_TERM_INCLUDE_SUMMER</externalDeveloperName>
    <inlineHelpText>This will show the current summer term if between spring and summer terms.</inlineHelpText>
    <label>Current Term including Summer</label>
    <length>49</length>
    <type>Text</type>
</CustomField>