force-app/main/default/objects/JBT_RET_TERMS_VW__x/fields/NEXT_TERM__c.field-meta.xml
<CustomField>
    <fullName>NEXT_TERM__c</fullName>
    <description>Next Academic Term</description>
    <externalDeveloperName>NEXT_TERM</externalDeveloperName>
    <label>Next Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Relative Term (external)</relationshipLabel>
    <relationshipName>Relative_Term_external1</relationshipName>
    <type>IndirectLookup</type>
</CustomField>