force-app/main/default/objects/JBT_RET_TERMS_VW__x/fields/NEXT_TERM_INCLUDE_SUMMER__c.field-meta.xml
<CustomField>
    <fullName>NEXT_TERM_INCLUDE_SUMMER__c</fullName>
    <description>Next Academic Term including Summer</description>
    <externalDeveloperName>NEXT_TERM_INCLUDE_SUMMER</externalDeveloperName>
    <inlineHelpText>Displays the following academic term, and will include summer during spring term.</inlineHelpText>
    <label>Next Term including Summer</label>
    <length>85</length>
    <type>Text</type>
</CustomField>