force-app/main/default/objects/JBT_RET_TERMS_VW__x/fields/PREV_PREV_TERM__c.field-meta.xml
<CustomField>
    <fullName>PREV_PREV_TERM__c</fullName>
    <description>The term prior to the previous academic term. Displays the term 2 previous to the current term, excluding summers.</description>
    <externalDeveloperName>PREV_PREV_TERM</externalDeveloperName>
    <label>Prior Previous Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Relative Term (external)</relationshipLabel>
    <relationshipName>Relative_Term_external3</relationshipName>
    <type>IndirectLookup</type>
</CustomField>