force-app/main/default/objects/JBT_RET_TERMS_VW__x/fields/PREV_TERM__c.field-meta.xml
<CustomField>
    <fullName>PREV_TERM__c</fullName>
    <description>Previous Academic Term</description>
    <externalDeveloperName>PREV_TERM</externalDeveloperName>
    <label>Previous Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Relative Term (external)</relationshipLabel>
    <relationshipName>Relative_Term_external2</relationshipName>
    <type>IndirectLookup</type>
</CustomField>